# obelisk-ob1

./: .gitignore  LICENSE  Makefile  README.md  upgradeOB1.sh
controlCardImage/: .config  README.md  external.desc  post-build.sh  prepareForSDCard.sh
controlCardImage/board/microchip/sama5d2_som/: at91-sama5d27_som1_ek.dts  genimage_boot_kernel_in_qspi.cfg  genimage_sdmmc.cfg
controlCardImage/configs/: at91bootstrap_defconfig  control_card_new_defconfig  kernel_defconfig  sama5d2_som_minimal_defconfig
resources/: sama5d27_som1_ek.c  spi_nor_ids.c
sdCardImage/: README.md  flash_board.qml
sdCardImage/board/microchip/sama5d2_som/: at91-sama5d27_som1_ek.dts
sdCardImage/configs/: at91bootstrap_defconfig  kernel_defconfig  new_sd_card_defconfig  sama5d2_som_minimal_defconfig
src/: .version.dcr  .version.sc  autoUpgrade.sh  burn-in  cgminer.sh  reset.sh  upgradeOB1.sh
src/apiserver/: Makefile  api-docs.md  auth.json  build.sh  buildcgsim.sh  macbuild.sh  test.sh  upload.sh
src/apiserver/cgminer-json/: asc-resp.json  coin-resp.json  config-resp.json  devdetails-resp.json  lockstats-resp.json  pools+stats+dev-resp.json  pools-resp.json  restart-resp.json  stats-resp.json  summary-resp.json  version-resp.json  zero-resp.json
src/apiserver/src/: CgMinerMain.cpp  CgMinerTypes.h  Crow.h  CrowMain.cpp  cgsim.cpp  example-notify.json  hash_stuff.cpp  main.cpp
src/apiserver/src/handlers/: Handlers.cpp  Handlers.h
src/apiserver/src/test/: testAuth.cpp  testSystem.cpp
src/apiserver/src/utils/: CgMinerUtils.cpp  CgMinerUtils.h  HttpStatusCodes.h  Logging.h  SafeQueue.h  base64.cpp  base64.h  utils.cpp  utils.h
src/cgminer/: Makefile  Makefile.am  Makefile.in  api.c  build_cgminer_arm.sh  cgminer.c  config.status  configure  configure.ac  driver-obelisk.c  driver-obelisk.h  hexdump.c  logging.h  miner.h  obelisk-config.h  upload.sh  util.c
src/cgminer/.deps/: cgminer-api.Po  cgminer-cgminer.Po  cgminer-driver-obelisk.Po  cgminer-hexdump.Po  cgminer-klist.Po  cgminer-logging.Po  cgminer-noncedup.Po  cgminer-sha2.Po  cgminer-util.Po
src/cgminer/autom4te.cache/: output.0  requests  traces.0
src/cgminer/ccan/: Makefile
src/cgminer/ccan/opt/: parse.c
src/cgminer/ccan/opt/.deps/: libccan_a-helpers.Po  libccan_a-opt.Po  libccan_a-parse.Po  libccan_a-usage.Po
src/cgminer/compat/: Makefile
src/cgminer/compat/jansson-2.9/: Makefile  Makefile.in  libtool
src/cgminer/compat/jansson-2.9/autom4te.cache/: requests
src/cgminer/compat/jansson-2.9/doc/: Makefile
src/cgminer/compat/jansson-2.9/src/: Makefile  dump.c  strconv.c
src/cgminer/compat/jansson-2.9/src/.deps/: dump.Plo  error.Plo  hashtable.Plo  hashtable_seed.Plo  load.Plo  memory.Plo  pack_unpack.Plo  strbuffer.Plo  strconv.Plo  utf.Plo  value.Plo
src/cgminer/compat/jansson-2.9/src/.libs/: libjansson.lai
src/cgminer/compat/jansson-2.9/test/: Makefile
src/cgminer/compat/jansson-2.9/test/suites/: Makefile
src/cgminer/compat/jansson-2.9/test/suites/api/: Makefile
src/cgminer/config/: cgminer.conf.dcr  cgminer.conf.sc
src/cgminer/lib/: Makefile  string.h
src/cgminer/lib/.deps/: memchr.Po  memmem.Po
src/cgminer/obelisk/: CSS_DCR1Defines.h  CSS_DCR1_hal.c  CSS_DCR1_hal.h  CSS_SC1Defines.h  CSS_SC1_hal.c  CSS_SC1_hal.h  Console.c  Console.h  EMCTest.h  GenericDefines.h  MCP23S17_Defines.h  MCP23S17_hal.c  MCP23S17_hal.h  MCP24AA02_Defines.h  MCP24AA02_hal.c  MCP24AA02_hal.h  MCP4017_Defines.h  MCP4017_hal.c  MCP4017_hal.h  MCP9903_Defines.h  MCP9903_hal.c  MCP9903_hal.h  MiscSupport.c  MiscSupport.h  Ob1API.c  Ob1API.h  Ob1Defines.h  Ob1FanCtrl.c  Ob1FanCtrl.h  Ob1Hashboard.c  Ob1Hashboard.h  Ob1Models.h  Ob1Test.c  Ob1Test.h  Ob1Utils.c  Ob1Utils.h  SPI_Support.c  SPI_Support.h  TCA9546A_Defines.h  TCA9546A_hal.c  (+15 more)
src/cgminer/obelisk/.deps/: cgminer-CSS_DCR1_hal.Po  cgminer-CSS_SC1_hal.Po  cgminer-Console.Po  cgminer-MCP23S17_hal.Po  cgminer-MCP24AA02_hal.Po  cgminer-MCP4017_hal.Po  cgminer-MCP9903_hal.Po  cgminer-MiscSupport.Po  cgminer-Ob1API.Po  cgminer-Ob1Hashboard.Po  cgminer-Ob1Test.Po  cgminer-Ob1Utils.Po  cgminer-SPI_Support.Po  cgminer-TCA9546A_hal.Po  cgminer-TWI_Support.Po  cgminer-Usermain.Po  cgminer-ads1015.Po  cgminer-gpio_test.Po  cgminer-i2c_test.Po  cgminer-multicast.Po  cgminer-spi_test.Po
src/cgminer/obelisk/dcrhash/: Makefile  blake256.c  blake256.h  dcrstratum.c  dcrstratum.h  dcrverify.c  dcrverify.h  test.c
src/cgminer/obelisk/persist/: persist.c  persist.h
src/cgminer/obelisk/siahash/: Makefile  siastratum.c  siastratum.h  siaverify.c  siaverify.h  stratum.c  test.c
src/cgminer/obelisk/siahash/.deps/: cgminer-blake2b-ref.Po  cgminer-siaverify.Po
src/controlCardUtils/: Makefile  gpio.c  gpio.h  gpio_init.c  gpio_setup.c  led_alternate.c  led_control.c  led_control.h  led_flash_green.c  led_flash_red.c  led_off.c
src/ee2mac/: Makefile  ee2mac.c
src/ipscanner/burnmon/: .prettierrc  package.json
src/ipscanner/burnmon/app/: app.global.scss  app.html  main.development.js  (+1 more)
src/ipscanner/ob1-scanner/: scp.go
src/ipscanner/ob1-scanner-gui/: package.json  tsconfig.json  webpack.config.base.js  webpack.config.development.js
src/obconfig/: package.json  tsconfig.json  tslint.json
src/obconfig/src/: obconfig.ts
src/obelisk-miner/: api.c  config.h  driver-obelisk.c  driver-obelisk.h  logging.c  noncedup.c  upload.sh  util.c
src/obelisk-miner/lib/: stdint.h
src/obelisk-miner/obelisk/: CSS_DCR1_hal.c  CSS_SC1_hal.c  Console.h  MCP23S17_hal.c  MCP9903_hal.c  MCP9903_hal.h  Ob1API.c  Ob1Defines.h  TCA9546A_hal.h  Usermain.c  ads1015.c  err_codes.h  multicast.h
src/sdCardUtils/: flash_check.c
src/upgrades/: README  build-upgrade.sh  setVersion.sh
src/watchdog/: S25watchdogd  watchdog.sh
src/webclient/: cp-upgrades.sh  optimize-build.sh  package.json  tsconfig.json  tslint.json  upload.sh
src/webclient/public/: index.html
src/webclient/src/: index.css  index.tsx
tools/: Makefile  README  boot_fuses.c  fan_speed.c  flash_check.c  flash_program.c  gpio_test.c  i2c_test.c  led_alternate.c  led_blink_green.c  led_blink_red.c  led_erase_error.c  spi_test.c
(+137 files in other folders)
